# PhD_chapter_1

./: .gitignore  ARTICLE_RU.tex  README.md  README.qmd  README_RU.md  pyproject.toml
src/data/: data_config.py
src/experiments/: experiment_design.py  main.py  test_methods.py
src/filling/: main.py
src/filling/data/: example_missing_values.csv
src/methods/: imputation_methods.py
src/processing/: data_processing.py
src/utils/: article_materials.py  logger.py  progresser.py
